kubernetes/flask-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: flask
    tier: frontend
  name: flask-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
      tier: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flask
        tier: frontend
    spec:
      containers:
      - image: dvoitekh/logger:latest
        name: flask-app
        ports:
        - containerPort: 5000
        resources: {}
status: {}
