kubernetes/sinatra-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sinatra
    tier: frontend
  name: sinatra-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sinatra
      tier: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sinatra
        tier: frontend
    spec:
      containers:
      - image: sinatra-auth:latest
        name: sinatra-app
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
        resources: {}
status: {}
