kubernetes/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: flask
    tier: frontend
  name: flask-app
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flask
    tier: frontend
  type: NodePort
status:
  loadBalancer: {}
