kubernetes/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
 labels:
   name: mongo
 name: mongo
spec:
 clusterIP: None
 ports:
 - port: 27017
   targetPort: 27017
 selector:
   name: mongo
